Moved survey results into its own class

--- a/src/main/resources/templates/results.html
+++ b/src/main/resources/templates/results.html
@@ -8,9 +8,9 @@
 	<p>I like {{ userResponse }} potatoes</p>
 	<p> Current results are</p>
 
-		<li>Yukon Gold: {{ goldCount }}</li>
-		<li>Russet Count: {{ russetCount }}</li>
-		<li>Sweet Count: {{ sweetCount }}</li>
+		<li>Yukon Gold: {{ results.currentGold }}</li>
+		<li>Russet Count: {{ results.currentRusset }}</li>
+		<li>Sweet Count: {{ results.currentSweet }}</li>
 
 	<a href="/twice-baked">Back up!</a>
 </body>
