--- a/src/main/resources/templates/results.html
+++ b/src/main/resources/templates/results.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf8">
-<title>results</title>
+<title>Survey Results</title>
 </head>
 <body>
 	<p>I like {{ userResponse }} potatoes</p>
